# Live-Snapshot-Experiments

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  LICENSE-BSD-3-CLAUSE  coverage_config_x86_64.json  demo.sh
.buildkite/: build_resources.py  custom-tests.json
.cargo/: config.toml
.github/: dependabot.yml
docs/: DESIGN.md  getting-started.md
resources/: make_test_resources.sh
resources/disk/: install_system.sh  make_rootfs.sh
resources/kernel/: busybox_1_32_1_static_config  configs.sh  make_busybox.sh  make_kernel.sh  make_kernel_busybox_image.sh  make_kernel_image_deb.sh  microvm-kernel-5.4-x86_64.config  microvm-kernel-initramfs-hello-aarch64.config  microvm-kernel-initramfs-hello-x86_64.config
src/: main.rs
src/api/: Cargo.toml
src/api/src/: lib.rs
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/devices/: Cargo.toml
src/devices/src/: lib.rs
src/devices/src/legacy/: i8042.rs  mod.rs  rtc.rs  serial.rs
src/devices/src/virtio/: mod.rs
src/devices/src/virtio/block/: device.rs  inorder_handler.rs  mod.rs  queue_handler.rs
src/devices/src/virtio/net/: bindings.rs  device.rs  mod.rs  queue_handler.rs  simple_handler.rs  tap.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs  resource_download.rs
src/vm-vcpu/: Cargo.toml
src/vm-vcpu-ref/: Cargo.toml  README.md  coverage_config_x86_64.json
src/vm-vcpu-ref/.buildkite/: custom-tests.json
src/vm-vcpu-ref/src/: lib.rs
src/vm-vcpu-ref/src/aarch64/: interrupts.rs  mod.rs
src/vm-vcpu-ref/src/x86_64/: cpuid.rs  gdt.rs  interrupts.rs  mod.rs  mpspec.rs  mptable.rs  msr_index.rs  msrs.rs
src/vm-vcpu/src/: lib.rs  vm.rs
src/vm-vcpu/src/vcpu/: mod.rs  regs.rs
src/vmm/: Cargo.toml
src/vmm/src/: boot.rs  lib.rs
src/vmm/src/config/: arg_parser.rs  builder.rs  mod.rs
src/vmm/tests/: integration_tests.rs
tests/: test_build_deps.py  test_run_reference_vmm.py
tests/tools/: s3_download.py
tests/tools/s3/: __init__.py  resource_manifest.json  utils.py
(+4 files in other folders)
