[package]
name = "vm-vcpu"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
libc = "0.2.76"
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.11.0"
vm-memory = "0.7.0"
vmm-sys-util = ">=0.8.0"
vm-device = "0.1.0"
bincode = "1.2.1"
savefile = "0.11.0"
serde_json = "1.0.64"
versionize = { version = ">=0.1.6" }
versionize_derive = { version = ">=0.1.3" }

utils = { path = "../utils" }
vm-vcpu-ref = { path = "../vm-vcpu-ref" }
arch = { path = "../arch" }

[patch.crates-io]
kvm-bindings = { git = "https://github.com/firecracker-microvm/kvm-bindings", tag = "v0.5.0-1", features = ["fam-wrappers"] }
[dev-dependencies]
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
