[package]
name = "vmm"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"

[dependencies]
event-manager = "0.2.1"
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.11.0"
libc = "0.2.91"
linux-loader = { version = "0.4.0", features = ["bzimage", "elf"] }
vm-allocator = "0.1.0"
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
vm-superio = "0.5.0"
vmm-sys-util = "0.8.0"
vm-device = "0.1.0"
serde_json = "1.0.87"
versionize = { version = ">=0.1.6" }
versionize_derive = { version = ">=0.1.3" }



devices = { path = "../devices" }
vm-vcpu = { path = "../vm-vcpu" }
vm-vcpu-ref = { path = "../vm-vcpu-ref" }
utils = { path = "../utils" }
arch = { path = "../arch" }

[patch.crates-io]
kvm-bindings = { git = "https://github.com/firecracker-microvm/kvm-bindings", tag = "v0.5.0-1", features = ["fam-wrappers"] }